[package]
name = "terminal-dc-pfp-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clearscreen = "4.0.6"
image = "0.25.10"
inquire = "0.9.4"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
viuer = "0.11.0"
